Initialize dependabot/github_actions/astral-sh/setup-uv-7.1.6

--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "release-it": "^19.0.4"
   },
   "scripts": {
-    "release": "release-it",
-    "check-vars": "node check-railway-vars.js",
-    "check-vars-railway": "railway run node check-railway-vars.js"
+    "release": "release-it"
   }
 }
