--- a/railway.toml
+++ b/railway.toml
@@ -3,10 +3,8 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-# Explicit start command to override any stale dashboard/service startCommand.
-# This ensures env var decoding (RSA_PRIVATE_KEY_B64) + migrations run before uvicorn.
-startCommand = "sh /app/start.sh"
-healthcheckPath = "/health/"
-healthcheckTimeout = 300
+startCommand = "uvicorn saleor.asgi:application --host=0.0.0.0 --port=$PORT --workers=2 --lifespan=off --ws=none --no-server-header --no-access-log --timeout-keep-alive=35 --timeout-graceful-shutdown=30 --limit-max-requests=10000"
+healthcheckPath = "/graphql/"
+healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
