Fix: Specify Node.js 20 for Railway deployment

--- a/hos-storefront/railway.toml
+++ b/hos-storefront/railway.toml
@@ -1,6 +1,16 @@
 [build]
 builder = "NIXPACKS"
 buildCommand = "npm run build"
+# Specify Node.js version for Next.js 16
+nixpacksConfig = """
+{
+  "phases": {
+    "setup": {
+      "nixPkgs": ["nodejs_20"]
+    }
+  }
+}
+"""
 
 [deploy]
 startCommand = "npm start"
