Fix: Remove redundant npm ci from buildCommand (handled by install phase)

--- a/hos-storefront/railway.toml
+++ b/hos-storefront/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm ci && npm run build"
+buildCommand = "npm run build"
 # Specify Node.js version for Next.js 16
 nixpacksConfig = """
 {
